# pensieve-local-llm-server

./: .gitignore  2025-10-31-agent-tdd-task-progress-context-retainer-and-then.txt  2025-11-04-create-this-httpsgithubcomthat-in-rustparsel.txt  2025-11-06-git-stauts-and-if-this-tool-is-working-run-it-and.txt  2025-12-01-do-you-understand-prd01md-ultrathink-can-you-c.txt  2025-12-01-read-md-files-and-now-tell-me-why-not-use-apple.txt  2025-12-02-read-md-files-and-now-tell-me-why-not-use-apple.txt  CLAUDE.md  CLI_COMMAND_FIXES_SUMMARY.md  Cargo.toml  Dockerfile  INGEST_20250930104944_pen01_tasks.md  INGEST_20250930104957_tasks.md  INGEST_20250930105036_pen03_tasks.md  INGEST_20250930105402_tasks.md  INGEST_20250930190405_pen04_100_tasks.md  INGEST_20250930190405_pen04_tasks.md  INSTALL.md  Journal01.md  MEMORY_OPTIMIZATION_COMPLETE.md  Makefile  PRD-Multi-Agent-Debate-Assistant.md  PRD01.md  PensievePatternBacklog.md  PensievePatternP01.md  README.md  READMELongForm20250929.md  ReadMe.txt  RoadMap20250928.md  Rust-Local-LLM-Inference-PRD-v01.md  TDD_VALIDATION_COMPLETE.md  TOCPensievePatternP01.md  WARP.md  architecture-moa-lite-debate-system.md  backup20251029.md  code-ingest-tool-commands.md  final-test.db-shm  final-test.db-wal  final_integration_demo  final_integration_demo.cpp  (+44 more)
code-ingest/: .clippy.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IDE_INTEGRATION_SUMMARY.md  README.md  TASK_11_VALIDATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  install.sh  simple_test.rs  test_chunking.rs  validate_chunk_level_task_generator.sh  validate_database_service  validate_database_service.rs
code-ingest/benches/: performance_benchmarks.rs
code-ingest/docs/: CLI_REFERENCE.md  DEVELOPER_GUIDE.md  MIGRATION_GUIDE.md  PERFORMANCE.md  TROUBLESHOOTING.md
code-ingest/examples/: README.md  architecture_analysis.md  basic_usage.md  chunked_analysis_workflow.md  custom_queries.md  git_repository_workflow.md  ide_integration.md  local_folder_workflow.md  logging_test.rs  security_analysis.md  task_generation_example.rs  test_serialization.rs
code-ingest/migrations/: 001_initial_schema.sql  002_enhanced_ingestion_tables.sql  003_chunked_table_support.sql
code-ingest/scripts/: validate_system.sh
code-ingest/src/: config.rs  core.rs  error.rs  git.rs  help.rs  lib.rs  logging.rs  main.rs
code-ingest/tests/: cli_chunk_level_task_generator_test.rs  cli_extract_content_test.rs  cli_generate_hierarchical_tasks_test.rs  cli_github_token_test.rs  cli_integration_test.rs  cli_task_generation_workflow_test.rs  database_exploration_test.rs  end_to_end_chunk_level_task_generator_test.rs  end_to_end_integration_test.rs  end_to_end_task_generation_test.rs  end_to_end_validation_test.rs  export_functionality_test.rs  file_classification_integration.rs  generate_tasks_integration.rs  generated_task_execution_validation_test.rs  ide_integration_workflow_test.rs  ingestion_engine_integration.rs  ingestion_metadata_test.rs  integration_end_to_end_workflows_test.rs  integration_ingestion_paths_test.rs  kiro_steering_integration_test.rs  l1l8_task_generation_integration.rs  postgresql_setup_test.rs  property_based_stress_tests.rs  property_based_tests.rs  query_analysis_integration.rs  query_prepare_integration.rs  sql_query_interface_test.rs  table_management_test.rs  task_division_test.rs  unit_chunking_algorithm_test.rs  unit_context_generation_test.rs  unit_database_connection_management_test.rs  unit_database_operations_comprehensive_test.rs  unit_database_operations_test.rs  unit_dependency_api_compatibility_test.rs  unit_file_classifier_test.rs  unit_performance_monitor_test.rs  unit_serialization_compatibility_test.rs  unit_task_hierarchy_generation_test.rs
crates/agent-role-definition-types/: Cargo.toml
crates/blackboard-handoff-protocol-core/: Cargo.toml
crates/complexity-router-heuristic-classifier/: Cargo.toml
crates/debate-orchestrator-state-machine/: Cargo.toml
crates/llama-server-client-streaming/: Cargo.toml
crates/pensieve-cli-debate-launcher/: Cargo.toml
crates/pensieve-http-api-server/: Cargo.toml
docs/: API.md  (+18 more)
p01-cli-interface-launcher/: Cargo.toml
p01-cli-interface-launcher/src/: lib.rs  main.rs
p01-cli-interface-launcher/tests/: integration_tests.rs  mlx_integration_tests.rs
p02-http-server-core/: Cargo.toml
p02-http-server-core/benches/: http_server_benchmarks.rs
p02-http-server-core/src/: lib.rs
p02-http-server-core/tests/: integration_tests.rs  parseltongue_executable_contracts.rs  property_based_validation.rs  stress_concurrent_requests.rs
p03-api-model-types/: Cargo.toml
p03-api-model-types/src/: lib.rs
p05-model-storage-core/: Cargo.toml
p05-model-storage-core/tests/: phi4_download_tests.rs
p07-foundation-types/: Cargo.toml
p07-foundation-types/src/: lib.rs
pensieve/: Cargo.toml
pensieve-01/: Cargo.toml
pensieve-01/src/: lib.rs  main.rs
pensieve-04/: Cargo.toml
pensieve-04/src/: lib.rs
pensieve-06/: Cargo.toml
pensieve-08_claude_core/: Cargo.toml
pensieve-08_claude_core/src/: lib.rs
pensieve-09-anthropic-proxy/: Cargo.toml
pensieve-09-anthropic-proxy/src/: lib.rs  memory.rs  server.rs  streaming.rs  translator.rs
pensieve-09-anthropic-proxy/tests/: server_memory_integration.rs
pensieve-validator/: Cargo.toml  INTEGRATION_TESTS.md  README.md  config-template.toml
pensieve-validator/src/: chaos_detector.rs  cli_config.rs  comparative_analyzer.rs  deduplication_analyzer.rs  directory_analyzer.rs  error_reporter.rs  errors.rs  graceful_degradation.rs  lib.rs  main.rs  pensieve_runner.rs  performance_benchmarker.rs  process_monitor.rs  production_readiness_assessor.rs  reliability_validator.rs  types.rs  ux_analyzer.rs  validation_orchestrator.rs
pensieve-validator/tests/: final_integration_test.rs  integration_tests.rs  pensieve_compatibility.rs  performance_baseline.rs  real_world_dataset.rs  simple_integration.rs  standalone_integration.rs  test_runner.rs
pensieve/src/: errors.rs  types.rs
pensieve/tests/: file_type_detection_integration.rs
standalone_build/: Cargo.toml
standalone_test/: Cargo.toml
(+552 files in other folders)
