[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Pensieve Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/that-in-rust/pensieve-local-llm-server"
description = "Multi-Agent Debate AI Assistant - Local LLM for OSS coding"

# ============================================================================
# WORKSPACE DEPENDENCIES
# Centralized dependency management for all crates
# ============================================================================

[workspace.dependencies]
# -----------------------------------------------------------------------------
# Core Runtime
# -----------------------------------------------------------------------------
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# -----------------------------------------------------------------------------
# Serialization
# -----------------------------------------------------------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# -----------------------------------------------------------------------------
# Error Handling
# -----------------------------------------------------------------------------
thiserror = "2.0"
anyhow = "1.0"

# -----------------------------------------------------------------------------
# HTTP Client/Server
# -----------------------------------------------------------------------------
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# -----------------------------------------------------------------------------
# Observability
# -----------------------------------------------------------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# -----------------------------------------------------------------------------
# CLI
# -----------------------------------------------------------------------------
clap = { version = "4.5", features = ["derive", "env"] }

# -----------------------------------------------------------------------------
# Utilities
# -----------------------------------------------------------------------------
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
tiktoken-rs = "0.6"
bytes = "1.8"

# -----------------------------------------------------------------------------
# Configuration
# -----------------------------------------------------------------------------
config = "0.14"
dotenvy = "0.15"

# -----------------------------------------------------------------------------
# Testing
# -----------------------------------------------------------------------------
tokio-test = "0.4"
wiremock = "0.6"
proptest = "1.5"
criterion = { version = "0.5", features = ["async_tokio"] }

# -----------------------------------------------------------------------------
# Internal Crates (will be added as they're created)
# -----------------------------------------------------------------------------
# llama-client = { path = "crates/llama-client" }
# blackboard = { path = "crates/blackboard" }
# agent-core = { path = "crates/agent-core" }
# complexity-router = { path = "crates/complexity-router" }
# debate-orchestrator = { path = "crates/debate-orchestrator" }
# web-search = { path = "crates/web-search" }
# pensieve-cli = { path = "crates/pensieve-cli" }
# pensieve-server = { path = "crates/pensieve-server" }

# ============================================================================
# WORKSPACE LINTS
# ============================================================================

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
