[package]
name = "code-ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "code-ingest"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { workspace = true }

# Database operations
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time handling
chrono = { workspace = true }

# UUID generation
uuid = { workspace = true }

# File system operations
walkdir = { workspace = true }

# Parallel processing
rayon = { workspace = true }

# Git operations
git2 = "0.18"

# Progress reporting
indicatif = "0.17"

# File type detection
mime_guess = { workspace = true }

# Content extraction
encoding_rs = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"