[package]
name = "p02-http-server-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pensieve HTTP API server core with Warp (L3)"

[dependencies]
# L1 dependencies
p07-foundation-types = { path = "../p07-foundation-types" }
# L2 dependencies
p04-inference-engine-core = { path = "../p04-inference-engine-core" }
p05-model-storage-core = { path = "../p05-model-storage-core" }
p06-metal-gpu-accel = { path = "../p06-metal-gpu-accel" }
# L3 dependencies
p03-api-model-types = { path = "../p03-api-model-types" }
# External dependencies for L3
tokio = { workspace = true }
warp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }
chrono = { workspace = true }
async-stream = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "http_server_benchmarks"
harness = false