[package]
name = "."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pensieve API models and serialization layer (L3)"

[dependencies]
# L1 dependencies
pensieve-07_core = { path = "../pensieve-07" }
# L2 dependencies
pensieve-05_models = { path = "../pensieve-05" }
# External dependencies for L3
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

