[package]
name = "."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Data models and GGUF interfaces for the Pensieve LLM server"
categories = ["data-structures", "parser-implementations"]
keywords = ["llm", "gguf", "models", "data", "parsing"]

[dependencies]
# Only depend on L1 (core) crate
pensieve-07_core = { path = "../pensieve-07", package = "pensieve-07_core" }

# Candle ML framework dependencies
candle-core = { workspace = true }
candle-transformers = { workspace = true }
safetensors = { workspace = true }

[dev-dependencies]
# Testing dependencies
proptest = { workspace = true }

[features]
default = ["std"]
std = ["pensieve-07_core/std"]

