[package]
name = "."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core foundation traits and error types for the Pensieve LLM server"
categories = ["no-std", "algorithms", "data-structures"]
keywords = ["llm", "core", "traits", "no-std"]

[dependencies]

[dev-dependencies]
# For testing, we can use alloc when std is available
proptest = { workspace = true }

[features]
default = ["std"]
std = []

