[package]
name = "pensieve-01"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pensieve CLI interface for server management (L3)"

[[bin]]
name = "pensieve"
path = "src/main.rs"

[dependencies]
# L1 dependencies
pensieve-07_core = { path = "../pensieve-07" }
# L2 dependencies
pensieve-04_engine = { path = "../pensieve-04" }
pensieve-05_models = { path = "../pensieve-05" }
pensieve-06_metal = { path = "../pensieve-06" }
# L3 dependencies
pensieve-02 = { path = "../pensieve-02" }
pensieve-03 = { path = "../pensieve-03" }
# External dependencies for L3
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tempfile = "3.0"

[dev-dependencies]
proptest = { workspace = true }

