[package]
name = "pensieve-04_engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core inference engine for the Pensieve LLM server"
categories = ["algorithms", "science", "mathematics"]
keywords = ["llm", "inference", "engine", "cpu"]

[dependencies]
# Only depend on L1 (core) crate
pensieve-07_core = { path = "../pensieve-07", package = "pensieve-07_core" }

# Candle ML framework dependencies
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# Async runtime for GREEN phase implementation
futures = { workspace = true }
async-stream = { workspace = true }

# Additional dependencies for real implementation
rand = "0.8"
tokenizers = "0.13"

[dev-dependencies]
# Testing dependencies
proptest = { workspace = true }
tokio = { workspace = true }
candle-transformers = { workspace = true }

[features]
default = ["std"]
std = ["pensieve-07_core/std"]

