[package]
name = "pensieve-09-anthropic-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP server
warp = "0.3"
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System monitoring
sysinfo = "0.30"

# Dependencies on other pensieve crates
pensieve-03 = { path = "../pensieve-03" }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
