[package]
name = "pensieve"
version = "0.1.0"
edition = "2021"
authors = ["Pensieve Team"]
description = "A simple command-line tool to quickly ingest text files into a clean, deduplicated database for LLM processing"
license = "MIT"
repository = "https://github.com/pensieve/pensieve"

[[bin]]
name = "pensieve"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { workspace = true }

# Database operations
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Cryptographic hashing
sha2 = { workspace = true }

# File system traversal
walkdir = { workspace = true }

# MIME type detection
mime_guess = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Additional utilities
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }

# Parallel processing
rayon = { workspace = true }

# Content extraction dependencies
encoding_rs = { workspace = true }
scraper = { workspace = true }
html2md = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
pdf-extract = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"