[package]
name = "pensieve-local-llm-server"
version = "0.9.4"
edition = "2021"
rust-version = "1.75"
authors = ["Pensieve Contributors"]
license = "MIT OR Apache-2.0"
description = "Zero-config local LLM server powered by Phi-4 reasoning model"

[[bin]]
name = "pensieve-local-llm-server"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

# Model download dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
indicatif = "0.17"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3.0"
proptest = "1.9"