[package]
name = "blackboard-handoff-protocol-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Proposal storage and cloud handoff protocol for MoA-Lite debate system"

[dependencies]
agent-role-definition-types = { path = "../agent-role-definition-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
