[package]
name = "pensieve-http-api-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Axum HTTP API server for MoA-Lite debate system"

[[bin]]
name = "pensieve-server"
path = "src/main.rs"

[dependencies]
# Internal crates
agent-role-definition-types = { path = "../agent-role-definition-types" }
blackboard-handoff-protocol-core = { path = "../blackboard-handoff-protocol-core" }
complexity-router-heuristic-classifier = { path = "../complexity-router-heuristic-classifier" }
llama-server-client-streaming = { path = "../llama-server-client-streaming" }
debate-orchestrator-state-machine = { path = "../debate-orchestrator-state-machine" }

# HTTP Server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
